--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,13 @@
-<h1>Bienvenue sur {{ title }}</h1>
+<h1 [ngStyle]="titleStyle">Bienvenue dans la tour des {{ heroes.length }} héros, {{ username }}</h1>
 
+<p>
+    <label for="InputUsername">Votre nom : <input id="InputUsername" type="text" name="name" [(ngModel)]="username"></label>
+</p>
+
+Vos héros :
+<ul>
+    <li *ngFor="let hero of heroes">{{ hero }} <small *ngIf="hero == username">(c'est moi :))</small></li>
+</ul>
+
+<label for="InputHeroName">Héros à ajouter : <input type="text" name="nameOfTheHero" id="InputHeroName" [(ngModel)]="heroToAdd"></label>
+<button (click)="addHero()">Ajouter un héros</button>
