--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,52 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+    --feu-bg-color: hsl(25, 100%, 47%);
+    --foudre-bg-color: hsl(57, 93%, 48%);
+    --plante-bg-color: hsl(125, 100%, 28%); 
+}
+
+.characters{
+    margin: 0 0 2em 0;
+    list-style-type: none;
+    padding: 0;
+    width: 15em;
+}
+
+.characters li {
+    cursor: pointer;
+    position: relative;
+    left: 0;
+    background-color: #EEE;
+    margin: .5em;
+    padding: .3em 0;
+    height: 1.6em;
+    border-radius: 4px;
+}
+
+.characters li:hover {
+    background-color: #DDD;
+    left: .1em;
+}
+
+.characters .text {
+    position: relative;
+    top: -3px;
+}
+
+.badge  {
+    display: inline-block;
+    font-size: small;
+    color: white;
+    padding: 0.8em 0.7em 0 0.7em;
+    background-color: #607D8B;
+    line-height: 1em;
+    position: relative;
+    left: -1px;
+    top: -4px;
+    height: 2em;
+    margin-right: .8em;
+    border-radius: 4px 0 0 4px;
+}
+.selected, .characters li.selected:hover {
+color: white;
+}
