--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <h1>Bienvenue sur {{ title }}</h1>
 
 
-<app-heroes-list></app-heroes-list>
-<app-villains-list></app-villains-list>
+<app-feu-list></app-feu-list>
+<app-foudre-list></app-foudre-list>
+<app-plante-list></app-plante-list>
 
